fix menu on small screens

--- a/WEB/ClientApp/src/scss/styles.css
+++ b/WEB/ClientApp/src/scss/styles.css
@@ -6,6 +6,15 @@ main {
     main {
         margin-left: 18rem;
     }
+
+    .navbar img.navbar-brand-img {
+        width: 100%;
+        height: initial;
+    }
+
+    #mainNavbar .navbar-brand {
+        margin-bottom: 1.5rem;
+    }
 }
 
 @media(min-width: 1200px) {
